--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,14 @@ jobs:
   build:
     docker:
       - image: node:12
+    branches:
+      only:
+        - 'main'
     steps:
-      - run: 'node -v'
+      - checkout
+      - run:
+        name: 'install'
+        command: 'npm install'
+      - run:
+        name: 'build'
+        command: 'npm build'
