--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,4 @@ jobs:
           command: 'chmod +x deploy.sh'
       - run:
           name: 'deploy2'
-          command: 'deploy.sh'
+          command: './deploy.sh'
